# dex-sudt-amm-contract

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  capsule.toml  deployment.toml
.github/workflows/: build_and_test.yml
contracts/sudt-info-lock-script/: Cargo.toml
contracts/sudt-info-lock-script/src/: error.rs  main.rs
contracts/sudt-info-type-script/: Cargo.toml  build.rs
contracts/sudt-info-type-script/src/: entry.rs  error.rs
contracts/sudt-info-type-script/src/entry/: liquidity_verify.rs  swap_verify.rs  type_id.rs  utils.rs
contracts/sudt-liquidity-lock-script/: Cargo.toml
contracts/sudt-liquidity-lock-script/src/: error.rs  main.rs
contracts/sudt-swap-lock-script/: Cargo.toml
contracts/sudt-swap-lock-script/src/: error.rs  main.rs
dynamic-loading/: Cargo.toml
dynamic-loading/src/: lib.rs
natives/: Cargo.toml
scripts/: run_sim_tests.sh
share/: Cargo.toml
share/src/: cell.rs  hash.rs  lib.rs
test/: Cargo.toml  Makefile
test/schemas/: basic.mol
test/src/: cell_builder.rs
test/src/schema/: generated.rs
test/src/tests/: mod.rs
tests/: Cargo.toml
tests/schemas/: cell.mol
tests/src/: cell_builder.rs  lib.rs  schema.rs  tx_builder.rs  utils.rs
tests/src/script_test/: mod.rs  sudt_info_lockscript_test.rs  sudt_info_typescript_test.rs  sudt_liquidity_lockscript_test.rs  sudt_swap_lockscript_test.rs
tests/src/tests/: mod.rs  sudt_info_typescript_test.rs
