[package]
name = "dynamic-loading"
version = "0.1.0"
authors = ["Po-dex <carbon9@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = { git = "https://github.com/nervosnetwork/ckb-std", rev = "29455b8"}
