[package]
name = "natives"
version = "0.1.0"
authors = ["Po-dex <carbon9@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-tool = "0.2"
ckb-dyn-lock = { version = "0.1", default-features = false }
ckb-std = { git = "https://github.com/nervosnetwork/ckb-std", rev = "29455b8", features = ["ckb-types", "simulator"] }
dynamic-loading = { path = "../dynamic-loading" }
share = { path = "../share" }
num-bigint = { version = "0.3", default-features = false }
num-traits = { version = "0.2", default-features = false }

[features]
default = ["simulator"]
simulator = []
