[package]
name = "tests"
version = "0.1.0"
authors = ["Po-dex <carbon9@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2b-rs = "0.2.0"
ckb-tool = "0.2"
ckb-testtool = "0.2"
ckb-system-scripts = "0.5"
ckb-standalone-debugger = "0.3"
ckb-x64-simulator = "0.4"
ckb-dyn-lock = { version = "0.1", features = ["lock_binary", "test_tool"] }
lazy_static = "1.4"
serde_json = "1.0"
rand = "0.8"
share = { path = "../share" }
molecule = "0.6"
secp256k1 = "0.19"
sha3 = "0.8"
hex = "0.4"
