[package]
name = "tests"
version = "0.1.0"
authors = ["Po-dex <carbon9@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2b-rs = "0.2"
molecule = "0.6"
lazy_static = "1.4"
ckb-tool = "0.2"
serde_json = "1.0"
ckb-testtool = "0.2"
ckb-standalone-debugger = "0.3"
ckb-x64-simulator = "0.4"
ckb-dyn-lock = { version = "0.1", features = ["lock_binary", "test_tool"] }
# secp256k1 = "0.19"
# sha3 = { version = "0.8", default-features = false }