[package]
name = "sudt-info-type-script"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
share = { path = "../../share" }
# lazy_static = { version = "1.4", features = ["spin_no_std"] }
num-bigint = { version = "0.3", default-features = false }
num-traits = { version = "0.2", default-features = false }
hex = { version = "=0.4.2", default-features = false }

[build-dependencies]
blake2b-ref = "0.3"
bytes = { version = "1.0", default-features = false }
hex = { version = "=0.4.2", default-features = false }
